--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,8 +1,9 @@
 .sidebar{
-    margin-top: 25px;
+    background-color: #fff;
 
     &-img{
         margin-left: 19px;
+        margin-top: 28px;
     }
 
     &-home{
