--- a/src/Components/Section/Section.scss
+++ b/src/Components/Section/Section.scss
@@ -1,10 +1,5 @@
 .section{
 
-    &-page{
-        // position:absolute;
-        // top: 35%;
-    }
-
     &-list{
         display: flex;
         justify-content: space-between;
@@ -17,5 +12,18 @@
         opacity: 0.4;
         font-size: 16px;
         line-height: 21px;
+    }
+
+    &-title{
+        display: flex;
+        width: 1260px;
+        justify-content: space-between;
+        align-items: center;
+        margin-left: 20px;
+    }
+
+    &-username{
+        width: 19%;
+        text-align: center;
     }
 }
