--- a/src/Components/Section/Section.scss
+++ b/src/Components/Section/Section.scss
@@ -8,6 +8,7 @@
     justify-content: space-between;
     width: 1200px;
     margin-left: 40px; 
+    padding-top: 5px;
    }
 
    &-names{
@@ -15,7 +16,6 @@
        font-size: 18px;
        line-height: 22px;
        width: 240px;
-    //    padding-top: 15px;
        display: flex;
        align-items: center;
 
@@ -28,7 +28,6 @@
            height: 35px;
            background-size: 30px;
            background-position: top 50% left 0%;
-        //    display: flex;
            align-items: center;
        }
    }
