--- a/src/Components/Aside/Aside.scss
+++ b/src/Components/Aside/Aside.scss
@@ -104,4 +104,25 @@
         }
     }
 
+    &__price{
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        opacity: 0.4;
+    }
+    &__right{
+        display: flex;
+        justify-content: space-between;
+        width: 310px;
+        margin: 30px 0px 0px 0px;
+    }
+
+    &__number{
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 30px;
+        color: #000;
+    }
+    
+
 }
