--- a/src/Components/Aside/Aside.scss
+++ b/src/Components/Aside/Aside.scss
@@ -83,6 +83,7 @@
         font-size: 16px;
         line-height: 26px;
         color: #000;
+        font-family: 'SF Pro Display';
     }
 
     &__lists{
@@ -119,9 +120,10 @@
 
     &__number{
         font-weight: 600;
-        font-size: 24px;
+        font-size: 28px;
         line-height: 30px;
         color: #000;
+        font-family: 'SF Pro Display';
     }
     
 
