--- a/src/Components/Aside/Aside.scss
+++ b/src/Components/Aside/Aside.scss
@@ -125,6 +125,40 @@
         color: #000;
         font-family: 'SF Pro Display';
     }
+
+    &__lefts{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__link{
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #ff0000;
+        text-decoration: none;
+    }
+
+    &__button{
+        width: 210px;
+        height: 45px;
+        background-color: #008DDD;
+        border: 2px solid #008DDD;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #fff;
+        transition: 0.8s;
+        border-radius: 4px;
+
+        &:hover{
+            background-color: #fff;
+            color: #008DDD;
+            border: 1px solid #008DDD;
+            transform: scale(0.90);
+        }
+    }
     
 
 }
